# Deep_classifier

./: .gitignore  README.md  init_setup_MacM1.sh  params.yaml  project_points.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev.yml  setup.cfg  setup.py  st_01.ipynb  template.py
research/: st_01.ipynb  st_02.ipynb  trails.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: data_ingestion.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py
src/deepClassifier/utils/: common.py
tests/unit/: test_utils.py
