[metadata]
license = MIT
license_file =license
## You specify the specifications of the application to run.
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
## Define packages that are required to install.
install_requires = 
    ## Third party libraries
    ensure == 1.0.2
python_requires = >= 3.7

[options_extras_require]
##packages that are require for extra activities eg: testing etc.
testing = 
    ## Run unit and integration test
    pytest>= 7.1.3
    ## Check whether there is typing error
    mypy>=0.971
    ## Detects any mistakes have done in application
    flake8>=5.0.4
    ## Create different working environments for testing
    tox>=3.25.1
    ## Whether the code we are wrting and the structure of python will be tested with black
    black>=22.8.0

[options.package_data]
deepClassifier = py.typed

[flake8]
## If character length of code is greater than 160 then it will prompt message
max-line-length = 160
##Ignore files
exclude = __init__.py
